03 - Currency Converter/src/css/history.css
*{
    margin: 0;
    padding: 0;
    color: white;
}
body{
    background: #212121;
}
.container{
    background: darkcyan;
    display: flex;
}
.homebtn{
    flex: 1;
    margin: 20px;
    float: left;
}
.title{
    font-size: 20px;
    margin: 25px 0;
}
.clearbtn{
    float: right;
    margin: 20px;
}
ul{
    background: #212121;
    font-size: 20px;
}
#icon{
    font-size: 30px;
}
.list{
    margin: 20px 10%;
    position: absolute;
    width: 80%;
}
.ele{
    border-radius: 5px;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
    margin: 20px 0;
    text-align: center;
    padding: 10px;
    color: burlywood;
    background: #323232;
    height: 40px;
    font-size: 20px;
    list-style: none;
}
.time{
    width: 20%;
    font-size: 10px;
    float: left;
}
#warning{
    display: flex;
    justify-content: center;
    font-size: 25px;
}

